--- a/W1.md
+++ b/W1.md
@@ -1,6 +1,6 @@
 # Week 01 Research
 - - -
-> ## Index)
+> ## Index
 >   > Color
 >   >   > Alpha/Omega?
 >   >   > 
@@ -13,4 +13,4 @@
 >   > OCIO/ACES
 - - -
 ## COLOR
-
+Basically color means a phenomenon of light. 
