--- a/W6.md
+++ b/W6.md
@@ -1,8 +1,10 @@
 # Week 06 Research
 - - -
    
-Roto   
-Merge   
-Rotopaint   
+Roto(scoping) - when extract net   
+Merge - when remove uncessary objects   
+Rotopaint - same as photoshop stamp tool    
 Tracking   
-   
+
+this four elements are needed when you want to be compositor,which means this four stuffs are very basic things.   
+## Rotoscoping
