--- a/W6.md
+++ b/W6.md
@@ -8,3 +8,5 @@ Tracking
 
 this four elements are needed when you want to be compositor,which means this four stuffs are very basic things.   
 ## Rotoscoping
+to trace moving images. we need to seperate specific object from given plate. to make alpha channel.
+Ultimate reason we use this : to make Alpha easier.
