--- a/W6.md
+++ b/W6.md
@@ -9,4 +9,9 @@ Tracking
 this four elements are needed when you want to be compositor,which means this four stuffs are very basic things.   
 ## Rotoscoping
 to trace moving images. we need to seperate specific object from given plate. to make alpha channel.
-Ultimate reason we use this : to make Alpha easier.
+Ultimate reason we use this : to make Alpha easier.   
+seperate beizer part by elements ; ex. head, hoodie, clothes, bag, etc.   
+we need to fisrt analyze how the object moves.   
+### facial tracking   
+there'll be dots on model's face, first we need to removee dots, then take each parts seperately.   
+Rotoscoping is free from both occasional, locatinal limitation.   
