--- a/W6.md
+++ b/W6.md
@@ -20,5 +20,5 @@ tip: when you trace objest, you need to recognize where the camera is, which par
 1. identify Motion path - not frame by frame   
 2. seperate by objects   
 3. stabilize plate - if it's not fixed shot, the things will go tough. so, you need to stabilize plate   
-4. primary and secondary forms   
-5. use rotational points   
+4. primary and secondary forms - you need to first know what moves how.   
+6. use rotational points - imagine ball joint   
