--- a/W6.md
+++ b/W6.md
@@ -22,3 +22,5 @@ tip: when you trace objest, you need to recognize where the camera is, which par
 3. stabilize plate - if it's not fixed shot, the things will go tough. so, you need to stabilize plate   
 4. primary and secondary forms - you need to first know what moves how.   
 6. use rotational points - imagine ball joint   
+   
+*make sure you check <full-size format>, <script directory>
