--- a/W6.md
+++ b/W6.md
@@ -23,4 +23,9 @@ tip: when you trace objest, you need to recognize where the camera is, which par
 4. primary and secondary forms - you need to first know what moves how.   
 6. use rotational points - imagine ball joint   
    
-* make sure you check 'full size format', 'script directory'
+* make sure you check 'full size format', 'script directory'   
+### relative directory 
+" ./ " means same folder.   
+" ../ " means upper folder.
+project setting - script directory button   
+
