--- a/W6.md
+++ b/W6.md
@@ -26,6 +26,7 @@ tip: when you trace objest, you need to recognize where the camera is, which par
 * make sure you check 'full size format', 'script directory'   
 ### relative directory 
 " ./ " means same folder.   
-" ../ " means upper folder.
+" ../ " means upper folder.   
+a single dot means one folder upper.
 project setting - script directory button   
 
