--- a/W6.md
+++ b/W6.md
@@ -26,7 +26,8 @@ tip: when you trace objest, you need to recognize where the camera is, which par
 * make sure you check 'full size format', 'script directory'   
 ### relative directory 
 " ./ " means same folder.   
-" ../ " means upper folder.   
-a single dot means one folder upper.
+" ../ " means higher folder.   
+ex) 2 folder higher = ../../   
+ex) 3 folders higher = ../../../
 project setting - script directory button   
 
