--- a/W6.md
+++ b/W6.md
@@ -28,6 +28,6 @@ tip: when you trace objest, you need to recognize where the camera is, which par
 " ./ " means same folder.   
 " ../ " means higher folder.   
 ex) 2 folder higher = ../../   
-ex) 3 folders higher = ../../../
+ex) 3 folders higher = ../../../   
 project setting - script directory button   
-
+just put the images in where nuke script is   
