--- a/W7.md
+++ b/W7.md
@@ -1,1 +1,8 @@
+# Week 07 Research
+- - -
+   
+Roto(scoping) - when extract net   
+Merge - when remove uncessary objects   
+Rotopaint - same as photoshop stamp tool    
+Tracking   
 
