--- a/W7.md
+++ b/W7.md
@@ -1,8 +1,7 @@
 # Week 07 Research
 - - -
    
-Roto(scoping) - when extract net   
-Merge - when remove uncessary objects   
-Rotopaint - same as photoshop stamp tool    
-Tracking   
-
+feather = E   
+light wrap fusion   
+Mat Overlay = M   
+suffle node - can adjust rgba input/output   
