--- a/W7.md
+++ b/W7.md
@@ -6,3 +6,24 @@ light wrap fusion
 Mat Overlay = M   
 suffle node - can adjust rgba input/output   
 node search = Tab
+
+- - -   
+Chroma Key   
+Keyers   
+Dispill   
+- - -   
+   
+## Chroma key    
+using specific color(=Chroma) to remove key from image   
+   
+### when to use green or blue? 
+when the object has green more -> use blue   
+when the object has blue more -> use green   
+
+## Keyers   
+
+   
+## Dispill   
+when we film, there must be spilt over light/color on the outline of the objects   
+this is occured by anti-aliasing   
+Dispill is to make those outlines more natural   
