--- a/W7.md
+++ b/W7.md
@@ -15,6 +15,11 @@ Dispill
    
 ## Chroma key    
 using specific color(=Chroma) to remove key from image   
+extract matte Somewhat easily   
+### Dunning 
+only on black and white film   
+### Sodium vapor light   
+### Bayer Pattern   
    
 ### when to use green or blue? 
 when the object has green more -> use blue   
