--- a/W7.md
+++ b/W7.md
@@ -16,6 +16,13 @@ Dispill
 ## Chroma key    
 using specific color(=Chroma) to remove key from image   
 extract matte Somewhat easily   
+background light is necessarily needed on Chroma   
+
+
+
+
+
+   
 ### Dunning 
 only on black and white film   
 ### Sodium vapor light   
