--- a/W7.md
+++ b/W7.md
@@ -33,6 +33,8 @@ when the object has green more -> use blue
 when the object has blue more -> use green   
 
 ## Keyers   
+Soft key, Hard key, Keymix   
+
 
    
 ## Dispill   
