--- a/W10.md
+++ b/W10.md
@@ -1,1 +1,8 @@
+# Week 10 Research
+- - -   
+Tracking   
+- - - 
+## What is tracking?
+to read pixelator from the plate then to make it follow specific object
 
+film = no 3rd dimension information, image only     
