--- a/W10.md
+++ b/W10.md
@@ -6,3 +6,6 @@ Tracking
 to read pixelator from the plate then to make it follow specific object
 
 film = no 3rd dimension information, image only     
+   
+
+transform match move node   
