--- a/W10.md
+++ b/W10.md
@@ -8,4 +8,5 @@ to read pixelator from the plate then to make it follow specific object
 film = no 3rd dimension information, image only     
    
 
-transform match move node   
+transform match move node    
+One-point tracking / Two-point tracking
