--- a/W10.md
+++ b/W10.md
@@ -10,3 +10,6 @@ film = no 3rd dimension information, image only
 
 transform match move node    
 One-point tracking / Two-point tracking
+
+
+lens distortion grid
