--- a/W1.md
+++ b/W1.md
@@ -15,3 +15,4 @@
 ## COLOR
 Basically color means a phenomenon of light.  
 When the light hits an object then reflects right into our eye, we recognize this as color.   
+### ALPHA
