--- a/W1.md
+++ b/W1.md
@@ -16,3 +16,6 @@
 Basically color means a phenomenon of light.  
 When the light hits an object then reflects right into our eye, we recognize this as color.   
 > ### ALPHA
+> What is Alpha? Digital devices only can show their color values by R, G, B, those three colors.   
+> Then what about alpha? Alpha is a virtual color channel, which only exists in digital world.   
+> 
