--- a/W1.md
+++ b/W1.md
@@ -2,7 +2,7 @@
 - - -
 > ## Index
 >   > Color
->   >   > Alpha/Omega?
+>   >   > Alpha
 >   >   > 
 >   > Pre-multiplication
 >   >
@@ -19,3 +19,5 @@ When the light hits an object then reflects right into our eye, we recognize thi
 > What is Alpha? Digital devices only can show their color values by R, G, B, those three colors.   
 > Then what about alpha? Alpha is a virtual color channel, which only exists in digital world.   
 > Alpha as a color channel means opacity. When alpha is 1, it's translucent. When it's 0, it'd be transparent.   
+   
+## Pre-multiplication
