--- a/W1.md
+++ b/W1.md
@@ -21,3 +21,7 @@ When the light hits an object then reflects right into our eye, we recognize thi
 > Alpha as a color channel means opacity. When alpha is 1, it's translucent. When it's 0, it'd be transparent.   
    
 ## Pre-multiplication
+   
+## COLORSPACE   
+With our human eyes, we are unable to see every color exists. Which means our eyesight that can recognize color is limited.   
+But digital device can see what we can't. They can tell micro-different feature from one another.   
