--- a/W1.md
+++ b/W1.md
@@ -4,13 +4,7 @@
 >   > Color
 >   >   > Alpha
 >   >   > 
->   > Pre-multiplication
->   >
 >   > Colorspace
->   > 
->   > Gamma
->   > 
->   > OCIO/ACES
 - - -
 ## COLOR
 Basically color means a phenomenon of light.  
@@ -25,3 +19,5 @@ When the light hits an object then reflects right into our eye, we recognize thi
 ## COLORSPACE   
 With our human eyes, we are unable to see every color exists. Which means our eyesight that can recognize color is limited.   
 But digital device can see what we can't. They can tell micro-different feature from one another.   
+However, what really matters is that each device has their own way to express the color. For example, how TV expresses the color and how computer expresses is different.   
+In this case, we need to integrate the format. 
