--- a/W2.md
+++ b/W2.md
@@ -1,1 +1,16 @@
+# Week 02 Research
+- - -
+> ## Index
+>   > ACES
+>   > 
+>   > Lut
+- - -
+## ACES
+  
+   
+## COLORSPACE   
+With our human eyes, we are unable to see every color exists. Which means our eyesight that can recognize color is limited.   
+But digital device can see what we can't. They can tell micro-different feature from one another.   
+However, what really matters is that each device has their own way to express the color. For example, how TV expresses the color and how computer expresses is different.   
+In this case, we need to integrate the format. 
 
