--- a/W2.md
+++ b/W2.md
@@ -6,7 +6,8 @@
 >   > Lut
 - - -
 ## ACES
-  
+We need to integrate the color format not to give an observer confusion.   
+
    
 ## COLORSPACE   
 With our human eyes, we are unable to see every color exists. Which means our eyesight that can recognize color is limited.   
