--- a/W1.md
+++ b/W1.md
@@ -18,4 +18,4 @@ When the light hits an object then reflects right into our eye, we recognize thi
 With our human eyes, we are unable to see every color exists. Which means our eyesight that can recognize color is limited.   
 But digital device can see what we can't. They can tell micro-different feature from one another.   
 However, what really matters is that each device has their own way to express the color. For example, how TV expresses the color and how computer expresses is different.   
-In this case, we need to integrate the format. 
+Colorspace is a graph shows us the range of color recognition of each formats.   
