--- a/W3.md
+++ b/W3.md
@@ -1,1 +1,8 @@
-
+# Week 03 Research
+- - -
+> ## Index
+>   > Matte Painting
+- - -
+## MATTE PAINTING
+The early matte painting refered to stacking acryl board to distinguish the layers.   
+Each acryl board has its own range view, so they make a entire scene by stacking up.   
