--- a/W6.md
+++ b/W6.md
@@ -1,12 +1,11 @@
 # Week 06 Research
 - - -
-   
-Roto(scoping) - when extract net   
-Merge - when remove uncessary objects   
-Rotopaint - same as photoshop stamp tool    
-Tracking   
-
-this four elements are needed when you want to be compositor,which means this four stuffs are very basic things.   
+> ## Index
+>   > Roto(scoping) - when extract net   
+>   > Merge - when remove uncessary objects   
+>   > Rotopaint - same as photoshop stamp tool    
+>   > Tracking   
+- - - 
 ## Rotoscoping
 to trace moving images. we need to seperate specific object from given plate. to make alpha channel.
 Ultimate reason we use this : to make Alpha easier.   
