--- a/W6.md
+++ b/W6.md
@@ -11,17 +11,17 @@ to trace moving images. we need to seperate specific object from given plate. to
 Ultimate reason we use this : to make Alpha easier.   
 seperate beizer part by elements ; ex. head, hoodie, clothes, bag, etc.   
 we need to fisrt analyze how the object moves.   
-### facial tracking   
-there'll be dots on model's face, first we need to removee dots, then take each parts seperately.   
-Rotoscoping is free from both occasional, locatinal limitation.   
-tip: when you trace objest, you need to recognize where the camera is, which part of the object is more exposed.   
-   
-1. identify Motion path - not frame by frame   
-2. seperate by objects   
-3. stabilize plate - if it's not fixed shot, the things will go tough. so, you need to stabilize plate   
-4. primary and secondary forms - you need to first know what moves how.   
-6. use rotational points - imagine ball joint   
-   
+> ### facial tracking   
+> there'll be dots on model's face, first we need to removee dots, then take each parts seperately.   
+> Rotoscoping is free from both occasional, locatinal limitation.   
+> tip: when you trace objest, you need to recognize where the camera is, which part of the object is more exposed.   
+>    
+> 1. identify Motion path - not frame by frame   
+> 2. seperate by objects   
+> 3. stabilize plate - if it's not fixed shot, the things will go tough. so, you need to stabilize plate   
+> 4. primary and secondary forms - you need to first know what moves how.   
+> 6. use rotational points - imagine ball joint   
+- - - 
 * make sure you check 'full size format', 'script directory'   
 ### relative directory 
 " ./ " means same folder.   
