--- a/W6.md
+++ b/W6.md
@@ -6,7 +6,7 @@
 >   > Rotopaint - same as photoshop stamp tool    
 >   > Tracking   
 - - - 
-## Rotoscoping
+## ROTOSCOPING
 to trace moving images. we need to seperate specific object from given plate. to make alpha channel.
 Ultimate reason we use this : to make Alpha easier.   
 seperate beizer part by elements ; ex. head, hoodie, clothes, bag, etc.   
@@ -23,7 +23,7 @@ we need to fisrt analyze how the object moves.
 > 6. use rotational points - imagine ball joint   
 - - - 
 * make sure you check 'full size format', 'script directory'   
-### relative directory 
+## Relative Directory 
 " ./ " means same folder.   
 " ../ " means higher folder.   
 ex) 2 folder higher = ../../   
