--- a/W10.md
+++ b/W10.md
@@ -1,6 +1,7 @@
 # Week 10 Research
 - - -   
-Tracking   
+> ## Index  
+>   > Tracking   
 - - - 
 ## What is tracking?
 to read pixelator from the plate then to make it follow specific object
