--- a/W8.md
+++ b/W8.md
@@ -1,8 +1,9 @@
 # Week 08 Research
 - - -  
-> Grade    
-> 
-> Color Correct   
+> ## Index
+>   >Grade    
+>   >
+>   > Color Correct   
 - - -
 ## GRADE  
 
