--- a/W4.md
+++ b/W4.md
@@ -1,8 +1,8 @@
 # Week 04 Research
 - - -
 > ## Index
->   > 
->   > 
+>   > Visual Language For Storytelling   
+>   >   > Brightness / Intensity   
 >   > 
 - - -
-## 
+## VISUAL LANGUAGE FOR STORYTELLING   
