--- a/W4.md
+++ b/W4.md
@@ -3,6 +3,13 @@
 > ## Index
 >   > Visual Language For Storytelling   
 >   >   > Brightness / Intensity   
->   > 
+>   >   > Contrast   
+>   >   > Sharpness   
+>   >   > Depth Of Field   
+>   >   > Composition   
+>   >   > Rule Of Third   
+>   >   > Framing   
+>   >   > Linear Motif   
 - - -
 ## VISUAL LANGUAGE FOR STORYTELLING   
+There is specific grammar used in visual language.   
