--- a/W4.md
+++ b/W4.md
@@ -13,3 +13,14 @@
 - - -
 ## VISUAL LANGUAGE FOR STORYTELLING   
 There is specific grammar used in visual language.   
+> ### BRIGHTNESS / INTENSITY   
+> Focal points are made by Contrast of the brightness.
+>
+> ### Contrast   
+> By making something different from the surroundings, we can make focal point.   
+>   
+> ### SHARPNESS  
+> The more the image is clear, the more we catch.   
+>   
+> ### DEPTH OF FIELD   
+> To make blurry image.   
