--- a/W8.md
+++ b/W8.md
@@ -6,4 +6,7 @@
 >   > Color Correct   
 - - -
 ## GRADE  
-
+Color grading by grade node.   
+Black point - us dropper in the darkest place   
+White point - vice versa   
+To fix filter as same value makes less image loss.   
