--- a/W11.md
+++ b/W11.md
@@ -2,4 +2,4 @@
 - - -  
 Group each nodes with the ones have similar colors   
 E : Feather   
-When you merge something and when your footage cross the bounding box, turn the <union> into <B> in merge node.
+When you merge something and when your footage cross the bounding box, turn the 'union' into 'B' in merge node.
