--- a/W12.md
+++ b/W12.md
@@ -1,8 +1,10 @@
 # Week 12 Research
 - - -
 > ## Index
->   > 
->   > 
->   > 
+>   > 3D Object Compositing   
 - - -
-## 
+## 3D OBJECT COMPOSITING   
+AOV is preferable.   
+Id map and normal is better when compositng after rendering   
+Not to forget use shuffle node   
+sharpen log2lin filter   
