--- a/W13.md
+++ b/W13.md
@@ -1,8 +1,6 @@
 # Week 13 Research
-- - -
-> ## Index
->   > 
->   > 
->   > 
-- - -
-## 
+- - - 
+## COPYCAT NODE
+groundtruth - after-image, output must be   
+by teaching it 2 images, available to make roto more easily   
+nukepedia
